u8g2 display added display for windlass and thruster

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,18 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:lora32u4II-server]
-platform = atmelavr
-board = lora32u4II
-framework = arduino
-src_filter = +<*> +<server/> -<client/>
-upload_port = COM4
-monitor_port = COM4
-
 [env:lora32u4II-remote]
 platform = atmelavr
 board = lora32u4II
 framework = arduino
 src_filter = +<*> -<server/> +<client/>
-upload_port = COM13
-monitor_port = COM13
+upload_port = COM9
+monitor_port = COM9
+lib_deps =
+    U8g2
+    Low-Power
+    LoRa
+
+[env:lora32u4II-server]
+platform = atmelavr
+board = lora32u4II
+framework = arduino
+src_filter = +<*> +<server/> -<client/>
+upload_port = COM8
+monitor_port = COM8
+lib_deps =
+    LoRa
