started on wifi module

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelavr
 board = lora32u4II
 framework = arduino
-src_filter = +<*> -<server/> +<client/>
+build_src_filter = +<*> -<server/> +<client/> -<wifi/>  +<lora32u4/>
 upload_port = COM9
 monitor_port = COM9
 lib_deps =
@@ -24,8 +24,23 @@ lib_deps =
 platform = atmelavr
 board = lora32u4II
 framework = arduino
-src_filter = +<*> +<server/> -<client/>
-upload_port = COM4
-monitor_port = COM4
+build_src_filter = +<*> +<server/> -<client/> -<wifi/> +<lora32u4/>
+upload_port = COM6
+monitor_port = COM6
 lib_deps =
     LoRa
+    https://github.com/bakercp/PacketSerial
+
+[env:esp8266-wifi]
+platform = espressif8266
+board = d1_mini
+framework = arduino
+build_src_filter = +<*> -<client/> -<server/> +<wifi/> -<lora32u4/>
+#upload_port = COM7
+#monitor_port = COM7
+lib_deps =
+     https://github.com/khoih-prog/ESPAsync_WiFiManager
+     https://github.com/ayushsharma82/ElegantOTA
+     https://github.com/bakercp/PacketSerial
+     ArduinoJSON
+build_flags=-DELEGANTOTA_USE_ASYNC_WEBSERVER=1
